k8s/Express-Deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: hearus-back-svc
  labels:
    app.kubernetes.io/name: hearus-back
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      name: back-ws
  selector:
    app.kubernetes.io/name: hearus-back
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hearus-back
  labels:
    app.kubernetes.io/name: hearus-back
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hearus-back
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hearus-back
    spec:
      containers:
      - image: judemin/hearus-back-node
        name: hearus-back
        ports:
        - containerPort: 3000
          name: back-ws
