k8s/Vue-Deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: hearus-front-svc
  labels:
    app.kubernetes.io/name: hearus-front
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app.kubernetes.io/name: hearus-front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hearus-front
  labels:
    app.kubernetes.io/name: hearus-front
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hearus-front
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hearus-front
    spec:
      containers:
      - image: choijihyeok/hearus-front-vue
        name: hearus-front
        ports:
        - containerPort: 80
          name: hearus-front
